# bei-stock-dashboard

./: .gitignore  package-lock.json  package.json  railway.toml
apps/backend/: .env.example  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml
apps/backend/.hypothesis/constants/: 06e0d3fa87d50aa2  0a8bd5ce21843595  10759415eff17e5b  15addb62aa96102a  1c8a112f90382a45  1e40eda9d4bc9fd0  2eb4168938b68647  2fcc664bf866dfdc  34c741336a4cb9f7  3899c3bf4fec1efa  3946bdf195073720  3a22fcb0c36c4bf6  3c44fcb4d2175692  4d68fa58e506c690  558a2fb6b9979f4f  57d71bf1399d78d2  66647df81d9910e7  69fb20b27871a3d2  6a017ba4149d4337  6c5a44a3ac091e69  718e62fa65788b8e  7306af40218b39e0  7aea19d74d83f4ab  7fcd7a580fe6bd0a  82f362953796741a  8601cd52bee56b7e  90335be1118f71e1  92ada88bd9cfefe0  94522448bc707478  9847bd3ecc773bc1  98504faf4d93e1eb  a4bc7af2ab2c6da2  be7d3527ddf5ca5c  c08e15a66b16df43  cab5ed957e1f3a12  d1c22b450b7a6d92  d58b60ba76c7eeef  deb25a61e7c571ae  e9e3cd6c969ba2c9  f60a583869fc7348  (+2 more)
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_add_is_syariah.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: analysis.py  auth.py  ranking.py  stocks.py  watchlist.py
apps/backend/app/core/: config.py  database.py  redis_client.py
apps/backend/app/middleware/: auth_middleware.py  (+1 more)
apps/backend/scripts/: init_db.py  seed_stocks.py
apps/backend/tests/: conftest.py  test_ai_analyzer.py  test_auth_service.py  test_data_pipeline.py  test_scoring_engine.py  test_stock_service.py  test_watchlist_ranking.py
(+69 files in other folders)
