[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bei-stock-backend"
version = "0.1.0"
description = "BEI Stock Dashboard — FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "ta>=0.11.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.7",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "apscheduler>=3.10.4",
    "pytz>=2024.1",
    "yfinance>=0.2.40",
    "httpx>=0.27.0",
    "openai>=1.35.0",
    "pydantic-settings>=2.3.4",
    "pydantic[email]>=2.8.2",
    "python-multipart>=0.0.9",
    "emails>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "hypothesis>=6.108.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
